--- a/src/App.css
+++ b/src/App.css
@@ -11,10 +11,8 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1, h2{
+    color: #81b8ef;
 }
 
 .App-header {
@@ -41,6 +39,10 @@
   }
 }
 
+.board-container{
+    margin-bottom: 20px;
+}
+
 .board{
     max-width: 462px;
     display: flex;
@@ -64,4 +66,19 @@
 }
 .box p{
     margin: 0px;
+}
+
+button.playAgainBtn{
+    border: 2px solid #81b8ef;
+    background-color: #81b8ef;
+    color: #282d33;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 700;
+}
+button.playAgainBtn:hover{
+    background-color: #282d33;
+    color: #81b8ef;
+    cursor: pointer;
 }
