--- a/src/PlayerSelection/style.scss
+++ b/src/PlayerSelection/style.scss
@@ -15,6 +15,7 @@
     background-color: #8c97ae;
     padding: 2rem;
     font-size: 2.6rem;
+    border: 0;
     &::placeholder {
       color: #c1d1ee;
     }
