--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -26,18 +26,6 @@ a {
 
 body {
   background-color: #282c34;
-}
-
-.App {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
-  max-width: 1000px;
-  width: 100%;
-  margin: 0 auto;
-  position: relative;
+  padding: 3rem;
 }
