--- a/src/components/GameSquare/style.scss
+++ b/src/components/GameSquare/style.scss
@@ -2,12 +2,18 @@
   background-color: #3a434e;
   color: #80b7ef;
   margin: 2px;
-  width: 150px;
-  height: 150px;
-  font-size: 130px;
+  width: 70px;
+  height: 70px;
+  font-size: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
+
+  @media (min-width: 700px) {
+    width: 150px;
+    height: 150px;
+    font-size: 130px;
+  }
 }
 .gameSquare:not(.has-value):hover {
   background-color: #4d6175;
@@ -30,12 +36,4 @@ button.playAgainBtn:hover {
   background-color: #282d33;
   color: #81b8ef;
   cursor: pointer;
-}
-
-@media (max-width: 500px) {
-  .gameSquare {
-    width: 100px;
-    height: 100px;
-    font-size: 80px;
-  }
 }
