--- a/src/components/Score/style.scss
+++ b/src/components/Score/style.scss
@@ -1,10 +1,15 @@
 .score {
-  position: absolute;
-  top: 0;
-  right: 2rem;
   border: 2px solid #fff;
-  border-top: 0;
-  padding: 2rem;
+  padding: 1rem;
+  margin-bottom: 2rem;
+  @media (min-width: 700px) {
+    border-top: 0;
+    position: absolute;
+    top: 0;
+    right: 2rem;
+    margin: 0;
+    padding: 2rem;
+  }
   &__title {
     margin-bottom: 1rem;
   }
